Blocitoff Configure Firebase

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,17 @@
-<h1>Home Page</h1>
+<div>
+  <aside class="sidenav">
+    <h1 class="sidenav-title">Blocitoff</h1>
+    <h3 class="links-container">Welcome! Create and update your to do list below.</h3>
+      <table class="sidenav-list">
+        <tr>
+          <td><button type="button" class="btn btn-default" ng-click="home.open()">Create New Task</button></td>
+        </tr>
+        <tr>
+          <td><button type="button" class="btn btn-default" ng-click="home.open()">View Active Tasks</button></td>
+        </tr>
+        <tr>
+          <td><button type="button" class="btn btn-default" ng-click="home.open()">View Completed Tasks</button></td>
+        </tr>
+      </table>
+  </aside>
+</div>
