--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,37 +1,42 @@
-.sidenav {
-  height: 100%;
-  width: 30%;
-  background: linear-gradient(Grey, LightGrey);
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left:0;
-  color: White;
-}
-
-.sidenav a:hover {
-  color: Blue;
-}
-
 h1 {
-  font-size: 45px;
-  padding-left: 20px;
+  font-size: 30px;
+  padding-left: 0px;
+  text-align: left;
 }
 
-h3 {
-  padding-left: 20px;
-  padding-right: 20px;
-  font-size: 20px;
+/* nav style */
+header {
+  margin-bottom: 100px;
 }
 
-button {
+/* button {
   background-color: white;
   color: Black;
   text-align: center;
   font-size: 15px;
   margin-bottom: 10px;
 }
+button a:hover {
+  color: Blue;
+}*/
 
-.sidenav-list {
-  padding: 20px;
+/* task list style */
+.list-title {
+  font-size: 40px;
+  color: Black;
+  background-color: LightGrey;
+  padding:  15px 15px 15px 25px;
+}
+.container-fluid {
+  float: right;
+  width: 50%;
+  text-align: left;
+  margin-right: 25%;
+}
+.task-container {
+  background-color: WhiteSmoke;
+  padding:  20px 20px 20px 25px;
+  font-size: 20px;
+  border-style: outset;
+  border-color: WhiteSmoke;
 }
