--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,20 +5,13 @@ h1 {
 }
 
 /* nav style */
-header {
+.navbar {
+  text-align: right;
   margin-bottom: 100px;
 }
-
-/* button {
-  background-color: white;
-  color: Black;
-  text-align: center;
-  font-size: 15px;
-  margin-bottom: 10px;
-}
-button a:hover {
+.navbar a:hover {
   color: Blue;
-}*/
+}
 
 /* task list style */
 .list-title {
@@ -32,6 +25,7 @@ button a:hover {
   width: 50%;
   text-align: left;
   margin-right: 25%;
+  margin-top: 5%;
 }
 .task-container {
   background-color: WhiteSmoke;
@@ -39,4 +33,8 @@ button a:hover {
   font-size: 20px;
   border-style: outset;
   border-color: WhiteSmoke;
+  color: Black;
+}
+.new-form-task {
+  margin-top: 15px;
 }
