--- a/app/templates/pastTasks.html
+++ b/app/templates/pastTasks.html
@@ -1,13 +1,9 @@
-<nav class="navbar">
-  <div>
-    <a ui-sref="tasks" class="navbar-link">Active Tasks</a>
-  </div>
-</nav>
 <section>
   <div class="container-fluid">
     <div class="list-title"> Expired and Completed Tasks </div>
     <div class="list-container">
-      <div class="task-container" ng-repeat="task in pastTasks.tasks" ng-show="pastTasks.expiredTasks(tasks.timeDate) || pastTasks.completedTasks(tasks.completed)">
+      <div class="task-container" ng-repeat="task in pastTasks.tasks"
+        ng-show="pastTasks.expiredTask(tasks.timeDate) || pastTasks.completedTask(tasks.completed)">
         <div> {{ task.text }} </div>
       </div>
     </div>
