--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 30px;
+  font-size: 25px;
   padding-left: 0px;
   text-align: left;
 }
@@ -15,7 +15,7 @@ h1 {
 
 /* task list style */
 .list-title {
-  font-size: 40px;
+  font-size: 35px;
   color: Black;
   background-color: LightGrey;
   padding:  15px 15px 15px 25px;
@@ -35,4 +35,5 @@ h1 {
 }
 .new-form-task {
   margin-top: 15px;
+  margin-bottom: 15px;
 }
